<ng-scrollbar> no longer preventing landing page from scrolling, further ui update to landing page

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -64,9 +64,12 @@
         line-height: 1;
 
         h2 {
-            width: 32%;
             display: inline-block;
             margin: $separation * 0.5 auto $separation auto;
+
+            @media (min-width: 48em) {
+                width: 32%;
+            }
         }
     }
 }
@@ -163,7 +166,6 @@
 .board {
     margin: 0;
     min-height: 80vh;
-    background-color: black; // TODO remove
 
     &.art {
         position: relative;
@@ -266,8 +268,9 @@
 }
 
 .footnote {
-    background-color: $primary;
+    background-color: darken($primary, 3%);
     padding: $page-padding 0;
+    color: white;
 
     p {
         margin: 1em 0;
@@ -287,11 +290,11 @@
     >* {
         display: block;
         width: fit-content;
-        padding: 0.4em;
         font-size: 1.15em;
 
         @media (min-width: 48em) {
             display: inline-block;
+            padding: 0.4em;
         }
     }
 
